# quads

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: clean_architecture_demo.py
notebooks/: poker.ipynb
quads/data/: delete_schema.sql  execute_schema.py  player_schema.sql
quads/deuces/: __init__.py  card.py  deck.py  evaluator.py  lookup.py  scripted_deck.py  t_deuces.py
quads/engine/: action_data.py  action_logger.py  agent.py  base_controller.py  betting_order.py  conn.py  controller.py  core_game.py  deck_sequence.py  enums.py  extras.py  game.py  game_state.py  hand.py  hand_parser.py  logger.py  logging_utils.py  money.py  observation.py  payouts.py  phase_controller.py  player.py  poker_env.py  pot_manager.py  rotation_probe.py  (+7 more)
scripts/: demo_agent_interface.py  play_heads_up.py  play_script_1.py  play_three_player.py  smoke_assign_dealer.py  smoke_check.py  smoke_play.py  test_agent_integration.py  test_agent_interface.py  test_agent_swapping.py  test_rule_based_agent.py  test_rule_based_integration.py  test_rule_based_simple.py
tests/: conftest.py  fakes.py  test_betting_chips_unit.py  test_betting_features.py  test_betting_order_table.py  test_core.py  test_deck_sequence.py  test_dueces.py  test_game_features.py  test_hand.py  test_hand_betting_logic.py  test_iter_action_order.py  test_logging_money_format.py  test_min_raise_validation.py  test_mins.py  test_money.py  test_nlhe_betting.py  test_payouts.py  test_phase_controller.py  test_position_can_act.py  test_pot_manager.py  test_primary.py  test_run_scripted_hand.py  test_script_loader.py  test_scripted_agent.py  test_scripted_deck.py  test_side_pots_scenarios.py  test_state_money_fields.py
(+17 files in other folders)
