[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quads"
version = "0.1.0"
description = "A poker engine build on top of a customized deuces library"
authors = [
    { name = "Samwood29" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["quads"]