# .toml toms obvious minimal language
# confige file that is easy to read and right

# what tools are needed to package the project
[build-system] 
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"


# name dependencies
[project]
name = "quads"
version = "0.1.0"
description = "A poker engine build on top of a customized deuces library"
authors = [
    { name = "Samwood29" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

# configure pytest form .toml file
# default cli options when running pytests
[tool.pytest.ini.options]
addopts = "-q --maxfail=1 --disable-warnings --cov=quads --cov-report=term-missing"
testpaths = ["tests"]
# quiet
# supress warnings
# measure coverage of the quads package
# show textual report of coverage in the terminal

# automatically finds packages
[tool.setuptools.packages.find]
where = ["quads"]

[tool.ruff]
line-length = 88
target-version ="py311"
select = ["E", "F", "I", "UP"] 
# e - error checks
# f - pyflake, (import checks)
# upgrade (syntax)
# import related checks
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["quads"]

[tool.coverage.report]
show_missing = true